RESULTS/AutoSpec/raw_results/out-3.5-NLA_lipus/out-sv-comp-mx/out/up_true-unreach-call_0002/up_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/up_true-unreach-call_0002/up_true-unreach-call_merged.c:30:3: error: unterminated comment
   30 |   /*@;
      |   ^
